--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -3,6 +3,7 @@
 	<%= link_to "Edit Ticket", [:edit, @project, @ticket] %>
 
 	<%= simple_format(@ticket.description) %>
+	<%= link_to "Delete Ticket", [@project, @ticket], method: :delete, data: { confirm: "Are you sure you want to delete this ticket?"} %>
 </div>
 
 <%# ist das gleiche wie: edit_project_ticket_path(@project, @ticket) %>
